<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Census Registration</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="admin_login">Admin Login</string>
    <string name="create_user">Create User</string>
    <string name="voting_center">Voting Center</string>
    <string name="full_name">Full Name</string>
    <string name="dni">DNI/Identity Number</string>
    <string name="phone_number">Phone Number</string>
    <string name="save">Save</string>
    <string name="logout">Logout</string>
</resources>